# AmbienteRoboDiferencial

./: CMakeLists.txt  frames.gv  output.urdf  package.xml
config/: controllers.yaml
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/lib/diff_robot/: spawn_car.py
devel/lib/pkgconfig/: diff_robot.pc  map2gazebo.pc
devel/share/diff_robot/cmake/: diff_robotConfig.cmake
devel/share/map2gazebo/cmake/: map2gazeboConfig.cmake
launch/: launch_car_in_gazebo.launch
src/: .desktop  Aprendizados.md  Lidar.py  Pioneer Python .ttt  RobotMove.py  TanBug.py  Utils.py  command_node.py  controller.py  leiame.txt  main.py  set_endpoint.py  spawn_car.py  tagentbug.py
world/: gazebo_control.xacro  gazebo_joint_states.xacro  ground.world  lidar.xacro  robot.urdf.teste.xacro  robot.urdf.xacro  robot_core.xacro
